public/assets/admin/css/custom.css
/* ... */
.request-loader img {
    position: fixed;
    display: none;
    width: 80px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.request-loader.show {
    display: block;
}

.request-loader.show img {
    display: block;
}

/* request loader css end */

/* summernote css starts */
.note-editor.note-frame .note-btn.note-image-btn,
.note-editor.note-frame .note-btn.note-video-btn,
.note-editor.note-frame .note-btn.note-link-btn {
    border: 1px solid #31ce36 !important;
    background: #31ce36 !important;
}

.sn-checkbox-open-in-new-window.form-check [type="checkbox"]:checked,
.sn-checkbox-open-in-new-window.form-check [type="checkbox"]:not(:checked) {
    left: 30px;
}

.form-check.sn-checkbox-open-in-new-window {
    padding-left: 30px;
}

.sn-checkbox-use-protocol.form-check [type="checkbox"]:checked,
.sn-checkbox-use-protocol.form-check [type="checkbox"]:not(:checked) {
    left: 30px;
}

.form-check.sn-checkbox-use-protocol {
    padding-left: 30px;
}

.form-check.sn-checkbox-use-protocol {
    display: none;
}

.sn-checkbox-open-in-new-window.form-check {
    display: none;
}

/* summernote css ends */

/* summernote rtl css starts */
.note-editor.note-frame .note-editing-area .note-editable.rtl {
    text-align: right !important;
}

/* summernote rtl css ends */

.list-group .list-group-item {
    display: block;
}

#myEditor li.list-group-item {
    cursor: move;
    border-left-width: 1px;
    border-right-width: 1px;
}

.custom-file-label::after {
    color: #fff;
    background-color: #1a2035;
    border-left: 1px solid #2f374b;
}

label.custom-file-label {
    background-color: #1a2035;
    border: 1px solid #2f374b;
}

.logo-header .logo .navbar-brand {
    max-width: 120px;
}

.dropdown-item button.deletebtn {
    background: none;
    border: none;
    font-size: 13px;
    color: #212529;
    padding: 0;
}

.custom-sm-btn {
    height: 34px;
    width: 34px;
    text-align: center;
    padding: 0;
    line-height: 28px !important;
    display: inline-block;
    font-size: 22px;
}

.custom-sm-btn .btn-label i {
    line-height: 28px;
}

.custom-sm-btn i {
    margin: 0 !important;
}

/* START: CSS for Summernote Content */
.note-editor.note-frame .note-editing-area .note-editable article,
.note-editor.note-frame .note-editing-area .note-editable aside,
.note-editor.note-frame .note-editing-area .note-editable details,
.note-editor.note-frame .note-editing-area .note-editable figcaption,
.note-editor.note-frame .note-editing-area .note-editable figure,
.note-editor.note-frame .note-editing-area .note-editable footer,
.note-editor.note-frame .note-editing-area .note-editable header,
.note-editor.note-frame .note-editing-area .note-editable hgroup,
.note-editor.note-frame .note-editing-area .note-editable menu,
.note-editor.note-frame .note-editing-area .note-editable nav,
.note-editor.note-frame .note-editing-area .note-editable section {
    display: block;
}

.note-editor.note-frame .note-editing-area .note-editable i,
.note-editor.note-frame .note-editing-area .note-editable span,
.note-editor.note-frame .note-editing-area .note-editable a {
    display: inline;
}

.note-editor.note-frame .note-editing-area .note-editable ul {
    display: block;
    list-style-type: disc;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}

.note-editor.note-frame .note-editing-area .note-editable ol {
    display: block;
    list-style-type: decimal;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}

.note-editor.note-frame .note-editing-area .note-editable th,
.note-editor.note-frame .note-editing-area .note-editable td {
    font-size: 14px;
    border-top-width: 0px;
    border-bottom: 1px solid;
    border-color: #ebedf2 !important;
    padding: 0 25px !important;
    height: 60px;
    vertical-align: middle !important;
    color: #000;
}

.note-editor.note-frame .note-editing-area .note-editable a {
    color: inherit;
    text-decoration: none;
}

.note-editor.note-frame .note-editing-area .note-editable a:hover,
.note-editor.note-frame .note-editing-area .note-editable a:focus {
    color: inherit;
    text-decoration: none;
}

.note-editor.note-frame .note-editing-area .note-editable a:focus,
.note-editor.note-frame .note-editing-area .note-editable input:focus,
.note-editor.note-frame .note-editing-area .note-editable textarea:focus,
.note-editor.note-frame .note-editing-area .note-editable button:focus {
    text-decoration: none;
    outline: none;
}

.note-editor.note-frame .note-editing-area .note-editable h1,
.note-editor.note-frame .note-editing-area .note-editable h2,
.note-editor.note-frame .note-editing-area .note-editable h3,
.note-editor.note-frame .note-editing-area .note-editable h4 {
    font-weight: 700;
}

/* END: CSS for Summernote Content */

/* START:  CSS to match with frontend (brought frontend 'style.css' file) */
.note-editor.note-frame .note-editing-area .note-editable h1,
.note-editor.note-frame .note-editing-area .note-editable h2,
.note-editor.note-frame .note-editing-area .note-editable h3,
.note-editor.note-frame .note-editing-area .note-editable h4,
.note-editor.note-frame .note-editing-area .note-editable h5,
.note-editor.note-frame .note-editing-area .note-editable h6 {
    font-family: "Poppins", sans-serif;
    color: #222f5a;
    margin: 0px;
}

.note-editor.note-frame .note-editing-area .note-editable h1 {
    font-size: 50px;
    line-height: 65px;
}

.note-editor.note-frame .note-editing-area .note-editable h2 {
    font-size: 40px;
    line-height: 50px;
}

.note-editor.note-frame .note-editing-area .note-editable h3 {
    font-size: 30px;
    line-height: 40px;
}

.note-editor.note-frame .note-editing-area .note-editable h4 {
    font-size: 22px;
    line-height: 30px;
}
/* ... */

